--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #232547;
+  color: rgb(27, 29, 26);
   text-decoration: underline;
 }
 
